Fixed modal displaying incorrectly on mobile devices

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Conor Venus - Blog</title>
   </head>
   <body class="overflow-x-hidden">
-    <div id="root" class="mx-auto max-w-6xl p-8"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
